tests/error/type_match/base_case_array_to_slice_const_propagation2.bz
// error: unable to match type '*mut i32' to '*i32'
// note: mismatched mutability of types 'mut i32' and 'i32'
// note: while matching expression of type 'mut [1: *mut i32]' to '[: mut *i32]'
function test()
{
	mut i = 0;
	mut arr: [1: *mut i32] = [ &i ];
	let _: [: mut *i32] = arr;
}
